alignment issues resolved fix

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -51,6 +51,10 @@
   padding-bottom: 10px;
 }
 
+#todo_items{
+  overflow-y: auto;
+}
+
 
 
 
